--- a/assets/webview/index.html
+++ b/assets/webview/index.html
@@ -16,20 +16,20 @@
 
 <body class="container-body">
     <script>
-        window.console = {
-            log: function (message) {
-                window.ReactNativeWebView.postMessage((JSON.stringify(message)));
-            },
-            info: function (message) {
-                window.ReactNativeWebView.postMessage((JSON.stringify(message)));
-            },
-            error: function (message) {
-                window.ReactNativeWebView.postMessage((JSON.stringify(message)));
-            },
-            warn: function (message) {
-                window.ReactNativeWebView.postMessage((JSON.stringify(message)));
-            }
-        };
+        // window.console = {
+        //     log: function (message) {
+        //         window.ReactNativeWebView.postMessage((JSON.stringify(message)));
+        //     },
+        //     info: function (message) {
+        //         window.ReactNativeWebView.postMessage((JSON.stringify(message)));
+        //     },
+        //     error: function (message) {
+        //         window.ReactNativeWebView.postMessage((JSON.stringify(message)));
+        //     },
+        //     warn: function (message) {
+        //         window.ReactNativeWebView.postMessage((JSON.stringify(message)));
+        //     }
+        // };
     </script>
     <header id="header-logo" class="header-css">
         <img width="30px" height="30px" src="./img/logo.png" />
