--- a/assets/webview/test2.html
+++ b/assets/webview/test2.html
@@ -11,9 +11,24 @@
 </head>
 
 <body>
+    <script>
+        function postMessageToReactNative (data) {
+            if (window.ReactNativeWebView) {
+                window.ReactNativeWebView.postMessage(JSON.stringify(data));
+            }
+        }
+        const messageHandler = function (e) {
+            console.log('messageHandler', e.data);
+            postMessageToReactNative(e.data);
+        };
+        if (window.addEventListener) {
+            window.addEventListener('message', messageHandler, false);
+        } else {
+            window.attachEvent('onmessage', messageHandler);
+        }
+    </script>
     <div>RemoteUnmuted</div>
-    <iframe id="backgroundImage" width="100%" height="100%" style="height: 95vh;"
-        src="https://dev.videoengager.com/static/popup.html?tennantId=Y3g2WVRXbVVzZlNJWjlLeQ==&shortUrl=admin_"></iframe>
+    'test'
 </body>
 
 </html>
