--- a/assets/webview/index.html
+++ b/assets/webview/index.html
@@ -16,25 +16,25 @@
 
 <body class="container-body">
     <script>
-        function postMessageToReactNative (data) {
-            if (window.ReactNativeWebView) {
-                window.ReactNativeWebView.postMessage(JSON.stringify(data));
-            }
-        }
-        window.console = {
-            log: function (message) {
-                postMessageToReactNative(message);
-            },
-            info: function (message) {
-                postMessageToReactNative(message);
-            },
-            error: function (message) {
-                postMessageToReactNative(message);
-            },
-            warn: function (message) {
-                postMessageToReactNative(message);
-            }
-        };
+        // function postMessageToReactNative (data) {
+        //     if (window.ReactNativeWebView) {
+        //         window.ReactNativeWebView.postMessage(JSON.stringify(data));
+        //     }
+        // }
+        // window.console = {
+        //     log: function (message) {
+        //         postMessageToReactNative(message);
+        //     },
+        //     info: function (message) {
+        //         postMessageToReactNative(message);
+        //     },
+        //     error: function (message) {
+        //         postMessageToReactNative(message);
+        //     },
+        //     warn: function (message) {
+        //         postMessageToReactNative(message);
+        //     }
+        // };
     </script>
     <header id="header-logo" class="header-css">
         <img width="30px" height="30px" src="./img/logo.png" />
