--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 
 <head>
     <title>My First Page</title>
-
+    <title>Live Chat!</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta property="og:title" content="Live Video Session" />
+    <meta property="og:description" content="Reach me with Live Video" />
+    <meta property="og:image" content="/static/images/smartvideologo.jpg" />
+    <meta property="og:image:alt" content="Reach me with Live Video" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@video_engager">
+    <meta name="twitter:title" content="Live Video Session">
+    <meta name="twitter:description" content="Reach me with Live Video">
+    <meta name="twitter:image" content="/static/images/smartvideologo.jpg">
 </head>
 
 </html>
