--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
 
 <head>
-    <title>My First Page</title>
-    <title>Live Chat!</title>
+    <title>Live Video Session</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta property="og:title" content="Live Video Session" />
     <meta property="og:description" content="Reach me with Live Video" />
-    <meta property="og:image" content="/static/images/smartvideologo.jpg" />
+    <meta property="og:image" content="/smlogo" />
     <meta property="og:image:alt" content="Reach me with Live Video" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@video_engager">
