--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta property="og:description" content="Reach me with Live Video" />
     <meta property="og:image" content="/smlogo" />
     <meta property="og:image:alt" content="Reach me with Live Video" />
+    <meta property="og:image:height" content="300">
+    <meta property="og:image:height" content="300">
+    <meta property="og:url" content="https://maamoon95.github.io/react-native-smartVideo/static/" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@video_engager">
     <meta name="twitter:title" content="Live Video Session">
