--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Live Video Session</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta data-rh="true" property="og:site_name" content="SmartVideo">
     <meta property="og:title" content="Live Video Session" />
     <meta property="og:description" content="Reach me with Live Video" />
     <meta property="og:image" content="/smlogo" />
