--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta data-rh="true" property="og:site_name" content="SmartVideo">
     <meta property="og:title" content="Live Video Session" />
     <meta property="og:description" content="Reach me with Live Video" />
-    <meta property="og:image" content="/smlogo" />
+    <meta property="og:image" content="/static/smlogo" />
     <meta property="og:image:alt" content="Reach me with Live Video" />
     <meta property="og:image:height" content="300">
     <meta property="og:image:height" content="300">
