--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="twitter:site" content="@video_engager">
     <meta name="twitter:title" content="Live Video Session">
     <meta name="twitter:description" content="Reach me with Live Video">
-    <meta name="twitter:image" content="/static/images/smartvideologo.jpg">
+    <meta name="twitter:image" content="/static/smartvideologo.jpg">
 </head>
 
 </html>
