--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta property="og:title" content="Live Video Session" />
     <meta property="og:description" content="Reach me with Live Video" />
-    <meta property="og:image" content="/static/smlogo" />
+    <meta property="og:image" content="/static/smlogo.jpg" />
     <meta property="og:image:alt" content="Reach me with Live Video" />
     <meta property="og:image:height" content="300">
     <meta property="og:image:height" content="300">
@@ -17,5 +17,12 @@
     <meta name="twitter:description" content="Reach me with Live Video">
     <meta name="twitter:image" content="/static/smartvideologo.jpg">
 </head>
+
+<body>
+    <link itemprop="thumbnailUrl" href="/static/smlogo.jpg">
+    <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject">
+        <link itemprop="url" href="/static/smlogo.jpg">
+    </span>
+</body>
 
 </html>
