--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta property="og:image:alt" content="Reach me with Live Video" />
     <meta property="og:image:height" content="300">
     <meta property="og:image:height" content="300">
+    <meta property="og:image" itemprop="image"
+        content="https://maamoon95.github.io/react-native-smartVideo/static/smartvideologo.jpg" />
+    <meta property="og:image:alt" content="Reach me with Live Video" />
     <meta property="og:url" content="https://maamoon95.github.io/react-native-smartVideo/static/" />
     <title>Live Video Session</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
