--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta property="og:description" content="Reach me with Live Video" />
     <meta property="og:image" itemprop="image"
         content="https://maamoon95.github.io/react-native-smartVideo/static/smlogo.jpg" />
+    <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:alt" content="Reach me with Live Video" />
     <meta property="og:image:height" content="300">
     <meta property="og:image:height" content="300">
     <meta property="og:image" itemprop="image"
         content="https://maamoon95.github.io/react-native-smartVideo/static/smartvideologo.jpg" />
+    <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:alt" content="Reach me with Live Video" />
     <meta property="og:url" content="https://maamoon95.github.io/react-native-smartVideo/static/" />
+    <link itemprop="thumbnailUrl" href="https://maamoon95.github.io/react-native-smartVideo/static/smlogo.jpg">
+
+    <meta property="og:updated_time" content="updatedtime">
+    <meta property="og:locale" content="en_GB" />
     <title>Live Video Session</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta data-rh="true" property="og:site_name" content="SmartVideo">
