--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 <head>
     <meta property="og:title" content="Live Video Session" />
     <meta property="og:description" content="Reach me with Live Video" />
-    <meta property="og:image" itemprop="image"
-        content="https://maamoon95.github.io/react-native-smartVideo/static/smlogo.jpg" />
+    <meta property="og:image" itemprop="image" content="/static/smlogo.jpg" />
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:alt" content="Reach me with Live Video" />
     <meta property="og:image:height" content="300">
     <meta property="og:image:height" content="300">
-    <meta property="og:image" itemprop="image"
-        content="https://maamoon95.github.io/react-native-smartVideo/static/smartvideologo.jpg" />
+    <meta property="og:image" itemprop="image" content="/static/smartvideologo.jpg" />
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:alt" content="Reach me with Live Video" />
-    <meta property="og:url" content="https://maamoon95.github.io/react-native-smartVideo/static/" />
-    <link itemprop="thumbnailUrl" href="https://maamoon95.github.io/react-native-smartVideo/static/smlogo.jpg">
+    <meta property="og:url" content="/static/" />
+    <link itemprop="thumbnailUrl" href="/static/smlogo.jpg">
 
     <meta property="og:updated_time" content="updatedtime">
     <meta property="og:locale" content="en_GB" />
@@ -25,13 +23,13 @@
     <meta name="twitter:site" content="@video_engager">
     <meta name="twitter:title" content="Live Video Session">
     <meta name="twitter:description" content="Reach me with Live Video">
-    <meta name="twitter:image" content="https://maamoon95.github.io/react-native-smartVideo/static/smartvideologo.jpg">
+    <meta name="twitter:image" content="/static/smartvideologo.jpg">
 </head>
 
 <body>
-    <link itemprop="thumbnailUrl" href="https://maamoon95.github.io/react-native-smartVideo/static/smlogo.jpg">
+    <link itemprop="thumbnailUrl" href="/static/smlogo.jpg">
     <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject">
-        <link itemprop="url" href="https://maamoon95.github.io/react-native-smartVideo/static/smlogo.jpg">
+        <link itemprop="url" href="/static/smlogo.jpg">
     </span>
 </body>
 
