--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta property="og:title" content="Live Video Session" />
+    <meta property="og:type" content="website" />
     <meta property="og:description" content="Reach me with Live Video" />
     <meta property="og:image" itemprop="image" content="/static/smlogo.jpg" />
     <meta property="og:image:type" content="image/jpeg">
@@ -11,7 +12,6 @@
     <meta property="og:image" itemprop="image" content="/static/smartvideologo.jpg" />
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:alt" content="Reach me with Live Video" />
-    <meta property="og:url" content="/static/" />
     <link itemprop="thumbnailUrl" href="/static/smlogo.jpg">
 
     <meta property="og:updated_time" content="updatedtime">
